provisioning/app-proxy/kubernetes/templates/cloud/aws/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-proxy
  namespace: $NAMESPACE
  labels:
    app: app-proxy
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "hub.${HOSTNAME_SUFFIX}"
      http:
        paths:
          - backend:
              service:
                name: app-proxy
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: "*.hub.${HOSTNAME_SUFFIX}"
      http:
        paths:
          - backend:
              service:
                name: app-proxy
                port:
                  number: 80
            path: /
            pathType: Prefix
